fixed layout issue for iphone

--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,8 @@ input[type="checkbox"]:checked + label::after {
   }
   
   .btn{
-	  margin-top:3px;
+	margin-top:3px;
+    padding: 10px 60px;  
   }
   .banner-image {
     max-width: 90%;
